<resources>
    <string name="app_name">CanZE (Legacy)</string>
    <string name="action_settings">Settings</string>
    <string name="menu_Bluetooth" translatable="false">Bluetooth</string>
    <string name="default_Zero" translatable="false">0</string>
    <string name="default_Dash" translatable="false">-</string>
    <string name="default_Slash" translatable="false">/</string>
    <string name="default_DoubleSpace" translatable="false">\u0020\u0020</string>
    <string name="default_Yes">Yes</string>
    <string name="default_No">No</string>
    <string name="default_Ok">OK</string>
    <string name="default_Cancel">Cancel</string>
    <string name="format_NoView" formatted="false">No view with id \'%s%s\'</string>
    <string name="format_YMDHMSs" translatable="false">yyyy-MM-dd HH:mm:ss.SSS</string>
    <string name="format_YMDHM" translatable="false">yyyy.MM.dd @ HH:mm</string>
    <string name="format_YMDHMS" translatable="false">yyyy-MM-dd-HH-mm-ss</string>
    <string name="unit_Nm" translatable="false">Nm</string>
    <string name="unit_SpeedKm" translatable="false">\u0020km/h</string>
    <string name="unit_SpeedMi" translatable="false">\u0020mi/h</string>
    <string name="unit_ConsumptionKm" translatable="false">\u0020kWh/100km</string>
    <string name="unit_ConsumptionMiAlt" translatable="false">\u0020mi/kWh</string>
    <string name="unit_Celsius" translatable="false">°C</string>
    <string name="label_debug">Debug\u0020</string>
    <string name="default_debug">#Debug</string>
    <string name="toast_InitWidgets">Initialising widgets</string>
    <string name="toast_BluetoothLost">Bluetooth connection lost!</string>
    <string name="prompt_Disclaimer" translatable="false">Formal Disclaimer</string>
    <string name="prompt_Accept">Yes, I got it!</string>
    <string name="prompt_Decline">No, I didn\'t understand a word…</string>
    <string name="prompt_DisclaimerText" translatable="false"><![CDATA[<html>CanZE (“the software”) is provided as is. Use the software at your own
                            risk. The authors make no warranties as to performance or fitness for a particular purpose,
                            or any other warranties whether expressed or implied. No oral or written communication
                            from or information provided by the authors shall create a warranty. Under no circumstances
                            shall the authors be liable for direct, indirect, special, incidental, or consequential
                            damages resulting from the use, misuse, or inability to use the software, even if the author
                            has been advised of the possibility of such damages. These exclusions and limitations may not
                            apply in all jurisdictions. You may have additional rights and some of these limitations may not
                            apply to you. This software is only intended for scientific usage.
                            <br>
                            <br>
                            <b>By using this software you are interfering with your car and doing that with hardware and
                            software beyond your control, created by a loose team of interested amateurs in this field. Any
                            car is a possibly lethal piece of machinery and you might hurt or kill yourself or others using
                            it, or even paying attention to the displays instead of watching the road.</b></html></string>
    <string name="toast_Reconnecting">Reconnecting Bluetooth…</string>
    <string name="toast_WaitingSettings">Stopping Bluetooth. Settings are being loaded. Please wait ....</string>
    <string name="toast_NotWhileDriving">Not possible while driving…</string>
    <string name="menu_Main">Main</string>
    <string name="help_Main">Use swipe gestures to switch between Main, Technical and Experimental screens.</string>
    <string name="menu_Technical">Technical</string>
    <string name="menu_Experimental">Experimental</string>
    <string name="help_Experimental">These buttons are for testing purposes only</string>
    <string name="title_activity_alldata">All data</string>
    <string name="button_alldata">All data</string>
    <string name="title_activity_auxbatt">12 volt battery</string>
    <string name="button_auxbatt">12 volt batt</string>
    <string name="label_auxbat">Voltage, Vehicle state, Charging state</string>
    <string name="label_auxbatvolt">Voltage</string>
    <string name="label_AuxStatus">Replacement advice</string>
    <string name="label_vehiclestate">Vehicle state</string>
    <string-array name="list_VehicleState">
        <item>Asleep, off (0:red)</item>
        <item>Awake, off (1:green)</item>
        <item>Ignition on (2:blue)</item>
        <item>Starting (3:yellow)</item>
        <item>Awake, on (4:cyan)</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
    </string-array>
    <string-array name="list_ChargingStatus2">
        <item>No charge (0:red)</item>
        <item>Waiting (planned, 1:green)</item>
        <item>Ended (2:blue)</item>
        <item>In progress (3:yellow)</item>
        <item>Failure (4:cyan)</item>
        <item>Waiting (5:purple)</item>
        <item>Flap open (6:black)</item>
        <item>Unavailable (7:grey)</item>
    </string-array>
    <string-array name="list_AuxStatus">
        <item>None</item>
        <item>1</item>
        <item>2</item>
        <item>Soon</item>
        <item>4</item>
        <item>Now</item>
        <item>6</item>
        <item>7</item>
    </string-array>
    <string name="title_activity_battery">Battery</string>
    <string name="button_Battery">Battery</string>
    <string name="graph_SOH">State of health (%)</string>
    <string name="graph_RealIndicatedSoc">Real vs. Indicated State of charge (%)</string>
    <string name="help_QA"><![CDATA[More detailed information about these data can be found in the <a href=\'http://canze.fisch.lu/qa/\'>Q & A section</a> of the <a href=\'http://canze.fisch.lu/\'>CanZE homepage</a>.]]></string>
    <string name="graph_CellVoltages">Cell Voltages (V)</string>
    <string name="graph_ModuleTemperatures">Battery modules temperatures (°C)</string>
    <string name="header_GridParameters">Grid parameters</string>
    <string name="label_MainsCurrentType">Mains current type</string>
    <string-array name="list_MainsCurrentType">
        <item>Nok</item>
        <item>AC mono</item>
        <item>AC tri</item>
        <item>DC</item>
        <item>AC bi</item>
    </string-array>
    <string name="label_phaseCurrent">Phase current RMS 1/2/3 (A)</string>
    <string name="label_PhaseVoltage">Phase voltage 1/2/3 (V)</string>
    <string name="label_InterPhaseVoltage">Inter phase voltage 12/23/31 (V)</string>
    <string name="label_MainsActivePowerConsumed">Mains active power consumed (W)</string>
    <string name="label_GroundResistanceOhm">Ground resistance (Ω)</string>
    <string name="label_CompletionStatus">Completion status</string>
    <string-array name="list_CompletionStatus">
        <item>Init</item>
        <item>HF10</item>
        <item>-</item>
        <item>Mains Ground Default</item>
        <item>-</item>
        <item>Earth Current default</item>
        <item>-</item>
        <item>-</item>
        <item>-</item>
        <item>Ground Default</item>
        <item>-</item>
        <item>-</item>
        <item>-</item>
        <item>-</item>
        <item>-</item>
        <item>-</item>
        <item>-</item>
        <item>Means Leakage DC</item>
        <item>-</item>
        <item>-</item>
        <item>-</item>
        <item>-</item>
        <item>-</item>
        <item>-</item>
        <item>-</item>
        <item>-</item>
        <item>-</item>
        <item>-</item>
        <item>-</item>
        <item>-</item>
        <item>-</item>
        <item>-</item>
        <item>Means Leakage LF</item>
        <item>-</item>
        <item>-</item>
        <item>-</item>
        <item>-</item>
        <item>-</item>
        <item>-</item>
        <item>-</item>
        <item>-</item>
        <item>-</item>
        <item>-</item>
        <item>-</item>
        <item>-</item>
        <item>-</item>
        <item>-</item>
        <item>-</item>
        <item>-</item>
        <item>Means Leakage DC+LF</item>
        <item>-</item>
        <item>-</item>
        <item>-</item>
        <item>-</item>
        <item>-</item>
        <item>-</item>
        <item>-</item>
        <item>-</item>
        <item>-</item>
        <item>-</item>
        <item>-</item>
        <item>-</item>
        <item>-</item>
        <item>-</item>
        <item>-</item>
        <item>Means Leakage HF</item>
        <item>-</item>
        <item>-</item>
        <item>-</item>
        <item>-</item>
        <item>-</item>
        <item>-</item>
        <item>-</item>
        <item>-</item>
        <item>-</item>
        <item>-</item>
        <item>-</item>
        <item>-</item>
        <item>-</item>
        <item>-</item>
        <item>-</item>
        <item>Means Leakage DC+HF</item>
        <item>-</item>
        <item>-</item>
        <item>-</item>
        <item>-</item>
        <item>-</item>
        <item>-</item>
        <item>-</item>
        <item>-</item>
        <item>-</item>
        <item>-</item>
        <item>-</item>
        <item>-</item>
        <item>-</item>
        <item>-</item>
        <item>-</item>
        <item>Means Leakage LF+HF</item>
        <item>-</item>
        <item>-</item>
        <item>-</item>
        <item>-</item>
        <item>-</item>
        <item>-</item>
        <item>-</item>
        <item>-</item>
        <item>-</item>
        <item>-</item>
        <item>-</item>
        <item>-</item>
        <item>-</item>
        <item>-</item>
        <item>-</item>
        <item>Means Leakage DC+LF+HF</item>
    </string-array>
    <string name="label_SupervisorState">Supervisor state</string>
    <string-array name="list_SupervisorState">
        <item>Init</item>
        <item>Wait</item>
        <item>ClosingS2</item>
        <item>InitType</item>
        <item>InitLkg</item>
        <item>InitChg</item>
        <item>Charge</item>
        <item>ZeroAmpMode</item>
        <item>EndOfChg</item>
        <item>OpeningS2</item>
        <item>ReadyToSleep</item>
        <item>EmergencyStop</item>
        <item>InitChargeDF</item>
        <item>OCPStop</item>
        <item>WaitS2</item>
    </string-array>
    <string name="title_activity_braking">Braking info</string>
    <string name="button_Braking">Braking</string>
    <string name="label_driver_torque_request">Requested Torque</string>
    <string name="label_ElecBrakeWheelsTorqueApplied">Applied Electrical Torque (regeneration)</string>
    <string name="label_diff_friction_torque">Applied Friction Torque (losses)</string>
    <string name="default_ZeroNm" translatable="false">0 Nm</string>
    <string name="help_AllTorques">Al torques are given in combined wheel torques, not motor torques.</string>
    <string name="title_activity_charging">Charging</string>
    <string name="button_Charging">Charging</string>
    <string name="button_Dash">Dash</string>
    <string name="button_Hud">Car HUD</string>
    <string name="hud_no_value">&#8211;</string>
    <string name="hud_label_soc" formatted="false">SoC %</string>
    <string name="hud_demo_start">Start demo</string>
    <string name="hud_demo_badge">DEMO &#183; tap to stop</string>
    <string name="button_ChargingHud">Charging HUD</string>
    <string name="charging_hud_label_power">CHARGING kW</string>
    <string name="charging_hud_label_time">TIME &#183; HOLD TO RESET</string>
    <string name="charging_hud_label_energy">kWh ADDED</string>
    <string name="charging_hud_hold_hint">Hold the time panel to reset the session</string>
    <string name="button_FluenceKangooTemps">Fluence Kangoo Temps</string>
</resources>