<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/table"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_row="3"
    android:layout_column="1"
    android:keepScreenOn="true"
    android:orientation="vertical"
    android:paddingLeft="0dp"
    android:paddingTop="0dp"
    android:paddingRight="0dp"
    android:paddingBottom="0dp"
    android:stretchColumns="3"
    tools:context="lu.fisch.canze.fragments.ExperimentalFragment">

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="0.8">

        <ScrollView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:fadeScrollbars="false"
            android:fillViewport="true"
            android:scrollbars="vertical">


            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:stretchColumns="*">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <Button
                        android:id="@+id/buttonDash"
                        style="?android:attr/button"
                        android:layout_width="0dp"
                        android:layout_height="fill_parent"
                        android:layout_column="0"
                        android:layout_marginLeft="4dp"
                        android:layout_marginTop="4dp"
                        android:layout_marginRight="4dp"
                        android:layout_marginBottom="4dp"
                        android:layout_weight="1"
                        android:drawableLeft="@mipmap/button_dash"
                        android:drawableStart="@mipmap/button_dash"
                        android:text="@string/button_Dash"
                        />

                    <Button
                        android:id="@+id/buttonFluenceKangooTemps"
                        style="?android:attr/button"
                        android:layout_width="0dp"
                        android:layout_height="fill_parent"
                        android:layout_column="1"
                        android:layout_marginLeft="4dp"
                        android:layout_marginTop="4dp"
                        android:layout_marginRight="4dp"
                        android:layout_marginBottom="4dp"
                        android:layout_weight="1"
                        android:text="@string/button_FluenceKangooTemps"
                        />

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <Button
                        android:id="@+id/buttonBatteryFullscreen"
                        style="?android:attr/button"
                        android:layout_width="0dp"
                        android:layout_height="fill_parent"
                        android:layout_column="0"
                        android:layout_marginLeft="4dp"
                        android:layout_marginTop="4dp"
                        android:layout_marginRight="4dp"
                        android:layout_marginBottom="4dp"
                        android:layout_weight="1"
                        android:drawableLeft="@mipmap/button_battery"
                        android:drawableStart="@mipmap/button_battery"
                        android:text="Battery (fullscreen)"
                        />

                    <Button
                        android:id="@+id/buttonHud"
                        style="?android:attr/button"
                        android:layout_width="0dp"
                        android:layout_height="fill_parent"
                        android:layout_column="1"
                        android:layout_marginLeft="4dp"
                        android:layout_marginTop="4dp"
                        android:layout_marginRight="4dp"
                        android:layout_marginBottom="4dp"
                        android:layout_weight="1"
                        android:drawableLeft="@mipmap/button_dash"
                        android:drawableStart="@mipmap/button_dash"
                        android:text="@string/button_Hud"
                        />

                </TableRow>

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <Button
                        android:id="@+id/buttonChargingHud"
                        style="?android:attr/button"
                        android:layout_width="0dp"
                        android:layout_height="fill_parent"
                        android:layout_column="0"
                        android:layout_marginLeft="4dp"
                        android:layout_marginTop="4dp"
                        android:layout_marginRight="4dp"
                        android:layout_marginBottom="4dp"
                        android:layout_weight="1"
                        android:drawableLeft="@mipmap/button_charge"
                        android:drawableStart="@mipmap/button_charge"
                        android:text="@string/button_ChargingHud"
                        />

                </TableRow>

            </TableLayout>

        </ScrollView>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="0dp"
            android:layout_marginRight="0dp"
            android:layout_marginBottom="0dp"
            android:background="#ffd124">

            <TextView
                android:layout_marginLeft="0dp"
                android:layout_marginRight="0dp"
                android:layout_marginBottom="0dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:text="@string/help_Experimental"
                android:layout_gravity="center_horizontal" />

        </LinearLayout>

    </RelativeLayout>

</LinearLayout>
